# oidbt_torrent

./: .gitignore  README.md  pyproject.toml  ruff.toml
oidbt_torrent/: __init__.py  __main__.py  torrent.py
