[build-system]
requires = [
    "setuptools>=82",
]

[project]
dynamic = ["version"]
name    = "oidbt_torrent"
readme  = "README.md"
# license = "AGPL-3.0-or-later"
authors = [{ name = "op200" }]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "bencode2>=0.3.29",
    "pydantic>=2.12.5",
]
requires-python = ">=3.14"

[project.urls]
Homepage = "https://github.com/OIDBT/oidbt_torrent"
Source   = "https://github.com/OIDBT/oidbt_torrent"

[tool.setuptools.dynamic]
version = { attr = "oidbt_torrent.__version__" }

[tool.setuptools.package-dir]
oidbt_torrent = "oidbt_torrent"
